# corelib-rs-no-std

./: .gitignore  CONFORMANCE_GAP_ANALYSIS.md  Cargo.toml  README.md  coverage.json  coverage.sh  renovate.json
.devcontainer/: Dockerfile  attach.sh  build.sh  devcontainer.json  start.sh
.github/workflows/: callgrind-gate.yml  ci.yml  docs.yml
assets/: test_vectors.json
benches/: bench.rs  perf.rs  run_callgrind.sh
examples/: speed.rs
src/: error.rs  istream.rs  lib.rs  ostream.rs  types.rs  varint.rs
tests/: api_tests.rs  config_tests.rs  istream_tests.rs  ostream_tests.rs  roundtrip_tests.rs  utf8_tests.rs  vectors_tests.rs
tests/common/: mod.rs
tools/: coverage.sh  footprint.sh
