[package]
name = "sofab"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "SofaBuffers (Sofab) — compact, streaming, no_std/no-heap serialization core for any platform, from microcontrollers to servers. Rust port of the C corelib (istream/ostream)."
repository = "https://github.com/sofa-buffers/corelib-rs"
keywords = ["serialization", "embedded", "no_std", "varint", "streaming"]
categories = ["embedded", "encoding", "no-std"]

[lib]
name = "sofab"

[dev-dependencies]
# Process CPU time (clock()) for the runtime benchmarks, so throughput is
# measured against CPU time rather than wall-clock — matching the C/C++ tools.
libc = "0.2"

# Per-op cost: cycles/op (hardware cycle counter) + throughput MB/s, over a
# ~1s CPU-time loop. Mirrors bench/c/perf.c and bench/cpp/perf.cpp.
[[bench]]
name = "perf"
harness = false

# Throughput speedtest: MB/s table over a ~1s CPU-time loop per workload.
# Mirrors bench/c/bench.c and bench/cpp/bench.cpp.
[[bench]]
name = "bench"
harness = false

# ---------------------------------------------------------------------------
# Feature flags mirror the C corelib's SOFAB_DISABLE_* compile switches, but
# expressed positively (a feature *enables* support). Turn features off to
# shrink the binary on tiny targets — see README "Footprint".
# ---------------------------------------------------------------------------
[features]
default = ["fixlen", "array", "sequence", "fp64"]
# Fixed-length fields: fp32, fp64, string, blob (wire types FIXLEN / FIXLENARRAY).
fixlen = []
# Array fields (wire types VARINTARRAY_* and, with `fixlen`, FIXLENARRAY).
array = []
# Nested sequences (wire types SEQUENCE_START / SEQUENCE_END).
sequence = []
# 64-bit floating point. Implies `fixlen`.
fp64 = ["fixlen"]

# ---------------------------------------------------------------------------
# Size-optimized release profile suitable for embedded firmware.
# ---------------------------------------------------------------------------
[profile.release]
opt-level = "z"      # optimize for size
lto = true           # let the linker strip everything unused
codegen-units = 1    # better cross-function size optimization
panic = "abort"      # no unwinding tables
strip = true

# Benchmark profile: -O3 for a fair comparison with the C/C++ -O3 builds.
[profile.bench]
opt-level = 3
debug = true
strip = false
lto = false
