[package]
name = "SofaBuffers"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "SofaBuffers (Sofab) — compact, streaming, no_std/no-heap serialization core for any platform, from microcontrollers to servers. Rust port of the C corelib (istream/ostream)."
repository = "https://github.com/sofa-buffers/corelib-rs-no-std"
keywords = ["serialization", "embedded", "no_std", "varint", "streaming"]
categories = ["embedded", "encoding", "no-std"]

[lib]
name = "sofab"

[dev-dependencies]
# Process CPU time (clock()) for the runtime benchmarks, so throughput is
# measured against CPU time rather than wall-clock — matching the C/C++ tools.
libc = "0.2"

# Parse the shared `assets/test_vectors.json` (the cross-language source of
# truth) in the conformance test suite. Test-only; not pulled into the no_std
# library build. Capped below 1.0.150, which raised its own MSRV to 1.71 and
# would otherwise break the 1.70 MSRV job (Cargo.lock is not committed, so the
# resolver always picks the newest match).
serde_json = ">=1, <1.0.150"

# Per-op cost: cycles/op (hardware cycle counter) + throughput MB/s, over a
# ~1s CPU-time loop. Mirrors bench/c/perf.c and bench/cpp/perf.cpp.
[[bench]]
name = "perf"
harness = false

# Throughput speedtest: MB/s table over a ~1s CPU-time loop per workload.
# Mirrors bench/c/bench.c and bench/cpp/bench.cpp.
[[bench]]
name = "bench"
harness = false

# ---------------------------------------------------------------------------
# Feature flags mirror the C corelib's SOFAB_DISABLE_* compile switches, but
# expressed positively (a feature *enables* support). Turn features off to
# shrink the binary on tiny targets — see README "Footprint".
# ---------------------------------------------------------------------------
# Every capability is ON by default; turn features *off* (via
# `default-features = false`, then re-enable what you want) to shrink the binary.
[features]
default = ["fixlen", "array", "sequence", "fp64", "value64"]
# Fixed-length fields: fp32, fp64, string, blob (wire types FIXLEN / FIXLENARRAY).
fixlen = []
# Array fields (wire types VARINTARRAY_* and, with `fixlen`, FIXLENARRAY).
array = []
# Nested sequences (wire types SEQUENCE_START / SEQUENCE_END).
sequence = []
# 64-bit floating point. Implies `fixlen`.
fp64 = ["fixlen"]
# 64-bit scalar value type (u64/i64), matching the C default. Disable it
# (`default-features = false` without re-adding `value64`) to use a 32-bit value
# type (u32/i32): on a 32-bit MCU this removes all double-width integer
# arithmetic and the libgcc/compiler 64-bit helpers it pulls in (`__aeabi_llsl`,
# 8-byte `memclr`) — the single largest footprint item. Trade-off: values above
# 2^32-1 can no longer be represented or decoded (mirrors a 32-bit
# `sofab_value_t` build of the C reference). Because it controls a public type it
# is *not* additive: application code that needs a specific width should guard it
# with `sofab::require!(value64)` / `require!(value32)` (see README).
value64 = []

# ---------------------------------------------------------------------------
# Size-optimized release profile suitable for embedded firmware.
# ---------------------------------------------------------------------------
[profile.release]
opt-level = "z"      # optimize for size
lto = true           # let the linker strip everything unused
codegen-units = 1    # better cross-function size optimization
panic = "abort"      # no unwinding tables
strip = true

# Benchmark profile: -O3 for a fair comparison with the C/C++ -O3 builds.
[profile.bench]
opt-level = 3
debug = true
strip = false
lto = false
